# drosophila_pirna_germplasm_streamlit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py  streamlit_app.py
.github/workflows/: ci.yml
configs/: demo.yaml
src/pirna_germplasm_qc/: __init__.py  core.py  pipeline.py  plots.py  synthetic.py
tests/: test_core.py  test_pipeline.py  test_streamlit_file.py  test_validation.py
