[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drosophila-pirna-germplasm-companion"
version = "0.1.0"
description = "Synthetic-data workflow for piRNA abundance QC, ping-pong signatures, Aub localization, and germ-cell phenotype integration."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "scipy>=1.13,<2",
  "matplotlib>=3.8,<4",
  "PyYAML>=6,<7",
  "tabulate>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
